--- a/articles/active-directory/devices/TOC.yml
+++ b/articles/active-directory/devices/TOC.yml
@@ -22,6 +22,8 @@
   items:
     - name: Eenmalige aanmelding voor on-premises resources
       href: azuread-join-sso.md
+    - name: Beheerde Azure-werkstations
+      href: concept-azure-managed-workstation.md
 - name: Handleidingen
   expanded: true
   items:
@@ -39,6 +41,8 @@
       href: assign-local-admin.md
     - name: Enterprise State Roaming inschakelen
       href: enterprise-state-roaming-enable.md
+    - name: Beheerde Azure-werkstations implementeren
+      href: howto-azure-managed-workstation.md
     - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met de huidige versie van Windows
       href: troubleshoot-hybrid-join-windows-current.md
     - name: Problemen oplossen met apparaten die deel uitmaken van een hybride Azure AD en werken met een oude versie van Windows
