--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -210,6 +210,8 @@
         - name: Op rollen gebaseerd toegangsbeheer
           displayName: rbac
           href: role-based-access-control.md
+        - name: Beveiligingskenmerken
+          href: cosmos-db-security-attributes.md
     - name: Gereedheid voor bedrijven
       items:
         - name: Online back-ups maken en on-demand herstellen
