--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -296,6 +296,8 @@
               href: transparent-data-encryption-byok-azure-sql.md
         - name: Beveiligingskenmerken
           href: sql-database-security-attributes.md
+        - name: Functiebeperkingen
+          href: sql-database-feature-restrictions.md
     - name: Schaalbaarheid
       items:
         - name: Overzicht van schaalbaarheid
@@ -368,12 +370,20 @@
           href: sql-database-temporal-tables.md
         - name: Automatisering van taken
           href: sql-database-job-automation-overview.md
+        - name: Gekoppelde servers
+          href: 'https://docs.microsoft.com/sql/relational-databases/linked-servers/linked-servers-database-engine?toc=/azure/sql-database/toc.json'
+        - name: Service Broker
+          href: 'https://docs.microsoft.com/sql/database-engine/configure-windows/sql-server-service-broker?toc=/azure/sql-database/toc.json'
+        - name: Database-e-mail
+          href: 'https://docs.microsoft.com/sql/relational-databases/database-mail/database-mail?toc=/azure/sql-database/toc.json'
         - name: Machine Learning Services
           items:
             - name: Overzicht
               href: sql-database-machine-learning-services-overview.md
             - name: Belangrijke verschillen
               href: sql-database-machine-learning-services-differences.md
+        - name: Integratie van CLR aan de serverzijde met .NET
+          href: 'https://docs.microsoft.com/sql/relational-databases/clr-integration/common-language-runtime-integration-overview?toc=/azure/sql-database/toc.json'
 - name: Handleidingen
   items:
     - name: Overzicht
