--- a/articles/dev-spaces/toc.yml
+++ b/articles/dev-spaces/toc.yml
@@ -1,7 +1,10 @@
 - name: Azure Dev Spaces
+  href: ./index.yml
   items:
     - name: Overzicht
-      href: index.yml
+      items:
+        - name: Over Azure Dev Spaces
+          href: about.md
     - name: Snelstartgidsen
       items:
         - name: Teamontwikkeling
@@ -10,7 +13,7 @@
           href: quickstart-java.md
         - name: .NET Core (VS Code en CLI)
           href: quickstart-netcore.md
-        - name: .NET Core (Visual Studio 2017)
+        - name: .NET Core (Visual Studio)
           href: quickstart-netcore-visualstudio.md
         - name: Node.js (VS Code en CLI)
           href: quickstart-nodejs.md
@@ -32,7 +35,7 @@
               href: multi-service-netcore.md
             - name: 3 - Teamontwikkeling
               href: team-development-netcore.md
-        - name: .NET Core (Visual Studio 2017)
+        - name: .NET Core (Visual Studio)
           items:
             - name: 1 - Aan de slag
               href: get-started-netcore-visualstudio.md
