--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -423,7 +423,7 @@
       items:
         - name: HDInsight-architectuur voor virtueel netwerk
           href: ../hdinsight-virtual-network-architecture.md
-        - name: Uitgaand HDInsight-verkeer beperken
+        - name: Firewall gebruiken om uitgaand verkeer te beperken
           href: ../hdinsight-restrict-outbound-traffic.md
         - name: HDInsight in Azure VNet
           href: ../hdinsight-extend-hadoop-virtual-network.md
