--- a/articles/healthcare-apis/TOC.yml
+++ b/articles/healthcare-apis/TOC.yml
@@ -23,6 +23,8 @@
       href: fhir-oss-cli-quickstart.md
     - name: CORS configureren
       href: configure-cross-origin-resource-sharing.md
+    - name: Cosmos DB configureren
+      href: configure-cosmos-db.md
 - name: Zelfstudies
   expanded: false
   items:
