--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -25,6 +25,8 @@
   items:
     - name: Connectors voor Logic Apps
       href: ../connectors/apis-list.md
+    - name: Geautomatiseerde terugkerende werkstromen plannen
+      href: concepts-schedule-automated-recurring-tasks-workflows.md
     - name: Serverloos met Azure
       href: logic-apps-serverless-overview.md
     - name: B2B-integratie en EDI-verwerking
@@ -179,6 +181,8 @@
           href: logic-apps-create-api-app.md
         - name: DB2
           href: ../connectors/connectors-create-api-db2.md
+        - name: Vertraging
+          href: ../connectors/connectors-native-delay.md
         - name: Dropbox
           href: ../connectors/connectors-create-api-dropbox.md
         - name: Dynamics 365 CRM Online
@@ -235,6 +239,8 @@
           href: ../connectors/connectors-create-api-outlook.md
         - name: Project Online
           href: ../connectors/connectors-create-api-projectonline.md
+        - name: Terugkeerpatroon
+          href: ../connectors/connectors-native-recurrence.md
         - name: Vraag/antwoord
           href: ../connectors/connectors-native-reqres.md
         - name: RSS
@@ -245,8 +251,6 @@
           href: logic-apps-using-sap-connector.md
         - name: SAP
           href: logic-apps-using-sap-connector-old.md
-        - name: Planning
-          href: ../connectors/connectors-native-recurrence.md
         - name: SendGrid
           href: ../connectors/connectors-create-api-sendgrid.md
         - name: SFTP
@@ -257,6 +261,8 @@
           href: ../connectors/connectors-create-api-sharepoint.md
         - name: Slack
           href: ../connectors/connectors-create-api-slack.md
+        - name: Sliding window
+          href: ../connectors/connectors-native-sliding-window.md
         - name: SMTP
           href: ../connectors/connectors-create-api-smtp.md
         - name: SQL Server
